# cookiecutter-app

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.app_name}}/: setup.cfg
{{cookiecutter.app_name}}/{{cookiecutter.app_package}}/: __init__.py  config.py  ext.py  views.py
{{cookiecutter.app_name}}/{{cookiecutter.app_package}}/resources/: config.py  serializers.py
{{cookiecutter.app_name}}/{{cookiecutter.app_package}}/theme/: webpack.py
{{cookiecutter.app_name}}/{{cookiecutter.app_package}}/theme/assets/semantic-ui/js/{{cookiecutter.app_package}}/: custom-component.js
{{cookiecutter.app_name}}/{{cookiecutter.app_package}}/theme/assets/semantic-ui/less/{{cookiecutter.app_package}}/: custom-components.less
{{cookiecutter.app_name}}/{{cookiecutter.app_package}}/theme/templates/semantic-ui/invenio_theme/: frontpage.html
{{cookiecutter.app_name}}/{{cookiecutter.app_package}}/theme/templates/semantic-ui/{{cookiecutter.app_package}}/: search.html
