
[metadata]
name = {{ cookiecutter.app_name }}
version = attr: {{cookiecutter.app_package}}.__version__
description = Application package for {{ cookiecutter.model_name }}
long_description = file: README.md
long_description_content_type = text/markdown
keywords = oarepo ui narodni-repozitar {{ cookiecutter.model_name }}
license = MIT
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.author_email }}
platforms = any
url = {{ cookiecutter.repository_url }}
classifiers =
    Development Status :: 2 - Pre-Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    Babel>=2.8
    Flask>=2.1.2
    importlib-metadata>=4.11.4
    invenio-assets>=1.2.7,<1.3.0
    oarepo-ui>=4.0.10
    {% if not cookiecutter.local_model_path %}{{ cookiecutter.model_name }}{% endif %}

[options.extras_require]

[options.entry_points]
invenio_base.apps =
    {{cookiecutter.app_package}} = {{cookiecutter.app_package}}.ext:{{cookiecutter.ext_name}}
invenio_base.api_apps =
    {{cookiecutter.app_package}} = {{cookiecutter.app_package}}.ext:{{cookiecutter.ext_name}}
invenio_assets.webpack =
    {{cookiecutter.app_package}}_theme = {{cookiecutter.app_package}}.theme.webpack:theme

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401
